--- a/client/grid.jade
+++ b/client/grid.jade
@@ -1,4 +1,4 @@
-template(name='home')
+template(name='grid')
     //- h1.ui.center.aligned.grey.header 
     //-     each currentUser.roles
     //-         strong #{this} &nbsp;
