--- a/client/building.jade
+++ b/client/building.jade
@@ -4,8 +4,7 @@ template(name='buildings')
             .four.wide.column
                 a(href="/building/#{slug}")
                     .ui.card.home_segment
-                        if is_admin
-                            img.ui.fluid.image(src="{{c.url image width=400 height=200 crop='fill'}}")
+                        img.ui.fluid.image(src="{{c.url image width=400 height=200 crop='fill'}}")
                         .content
                             .ui.large.header #{building_code}
                                 each building_numbers
@@ -56,7 +55,7 @@ template(name='unit_card')
             //- a.ui.large.button(href="/unit/#{_id}")
             //-     i.yellow.right.chevron.icon
             div
-            +i name='rent'
+            +i name='rent' title='owner(s)'
             //- i.dollar.icon
             each owners
                 .ui.basic.large.label
@@ -67,7 +66,7 @@ template(name='unit_card')
                     |#{first_name} #{last_name}
             div
             //- i.home.icon
-            +i name='home'
+            +i name='home' title='renters'
             each residents
                 .ui.basic.large.label
                     if kiosk_photo
