--- a/client/inline.jade
+++ b/client/inline.jade
@@ -28,7 +28,7 @@ template(name='inline_doc')
             else
                 div(class=doc_classes)
                     |{{nl2br body}}
-            if is_admin
+            if is_staff
                 +session_edit_icon
     else
         if is_admin
