--- a/client/users.jade
+++ b/client/users.jade
@@ -8,6 +8,17 @@ template(name='residents')
                 .ui.centered.four.stackable.cards
                     each residents
                         +resident
+                        
+template(name='profiles') 
+    .ui.padded.grid
+        .row
+            .sixteen.wide.column
+                .ui.left.icon.huge.fluid.input
+                    i.search.icon
+                    input.username_search(type='text' placeholder='lookup resident...' autofocus='autofocus')
+                .ui.centered.four.stackable.cards
+                    each profiles
+                        +profile
                 
 template(name='users') 
     .ui.padded.grid
@@ -30,9 +41,11 @@ template(name='resident')
             //- a(href="/user/#{username}/")
             //- img(src="{{c.url image_id height=400 width=400 background='white' crop='pad'}}")
             if kiosk_photo
-                img.ui.image(src="{{c.url kiosk_photo width=400 height=400 crop='fit'}}")
+                a.zoom(href="/user/#{username}/")
+                    img.ui.image(src="{{c.url kiosk_photo width=400 height=400 crop='fit'}}")
             else if image_id
-                img.ui.image(src="{{c.url image_id width=400 height=400 crop='fit'}}")
+                a.zoom(href="/user/#{username}/")
+                    img.ui.image(src="{{c.url image_id width=400 height=400 crop='fit'}}")
         .content
             a(href="/user/#{username}/")
                 h2.ui.center.aligned.header #{first_name} #{last_name} 
@@ -58,6 +71,23 @@ template(name='user')
                 img.ui.image(src="{{c.url kiosk_photo width=400 height=400 crop='fit'}}")
             else if image_id
                 img.ui.image(src="{{c.url image_id width=400 height=400 crop='fit'}}")
+        .content
+            a(href="/user/#{username}/")
+                h2.ui.center.aligned.header #{first_name} #{last_name} 
+                .ui.small.header @#{username}
+            each five_tags
+                .ui.compact.small.circular.basic.button.person_tag(class=tag_class) 
+                    strong #{this}
+            +text_view key='first_name' label='First Name'
+            +text_view key='last_name' label='Last Name'
+            
+            
+            
+template(name='profile')                
+    .ui.card
+        .image
+            a(href="/user/#{username}/")
+                img.ui.image(src="{{c.url profile_image_id width=400 height=400 crop='fit'}}")
         .content
             a(href="/user/#{username}/")
                 h2.ui.center.aligned.header #{first_name} #{last_name} 
