--- a/components/maintenance/staff.jade
+++ b/components/maintenance/staff.jade
@@ -19,8 +19,8 @@ template(name='staff')
                 //- +add_button model='communication' label='communication'
                 //- +add_button model='frontdesk_hourly_checklist' label='hourly checklist'
                 //- +add_button model='front_desk_opening_closing_checklist' label='opening/closing checklist'
-                //- +unit_key_widget
-                a.ui.header(href='readings')
+                +unit_key_widget
+                a.ui.compact.button(href='readings')
                     +i name='water' classes='ui inline image'                
                     |water readings
                 div
@@ -103,11 +103,12 @@ template(name='staff')
 
 template(name='hc_session')
     .ui.card
-        if session_resident.kiosk_photo
-            img.ui.image(src="{{c.url session_resident.kiosk_photo width=300 height=300 gravity='face' crop='fill'}}")
-        else
-            //- |old photo
-            img.ui.image(src="{{c.url session_resident.image_id width=300 height=300 gravity='face' crop='fill'}}")
+        a.zoom(href="/user/#{session_resident.username}")
+            if session_resident.kiosk_photo
+                img.ui.image(src="{{c.url session_resident.kiosk_photo width=300 height=300 gravity='face' crop='fill'}}")
+            else
+                //- |old photo
+                    img.ui.image(src="{{c.url session_resident.image_id width=300 height=300 gravity='face' crop='fill'}}")
         .content
             a(href="/user/#{session_resident.username}")
                 .ui.inline.header
@@ -197,19 +198,20 @@ template(name='task_widget')
         .ui.icon.basic.button.new_task
             i.plus.icon
             //- input.assign_task(type='text' placeholder='assign task...')
-        //- .ui.basic.button.view_complete(class=view_complete_class)
-        //-     |View Completed
-        // .ui.basic.button.view_incomplete(class=view_complete_class)
-        //     |View Incomplete
-        each tasks
-            .ui.smoothed.segment
-                .ui.header #{body}
-                +boolean_edit key='complete' label='Complete' direct=true true_icon='checkmark' false_icon='remove' icon_only=true
-                //- +voting
-                +author_info
-                +creation_info
-                if is_author
-                    +remove_button
+        .ui.basic.button.view_complete(class=view_complete_class)
+             |View Completed
+        .ui.basic.button.view_incomplete(class=view_complete_class)
+            |View Incomplete
+        .smallscroll
+            each tasks
+                .ui.small.segment
+                    .ui.header #{body}
+                    +boolean_edit key='complete' label='Complete' direct=true true_icon='checkmark' false_icon='remove' icon_only=true
+                    //- +voting
+                    +author_info
+                    +creation_info
+                    if is_author
+                        +remove_button
     
     
 template(name='wywo')
@@ -236,7 +238,7 @@ template(name='schedule')
                 th sat
         tbody
             tr
-                td 7/8am-4pm
+                td 7/8am-12pm
                 td 
                     +facet_staff_select tags='shift,sunday,morning'
                 td 
@@ -251,22 +253,22 @@ template(name='schedule')
                     +facet_staff_select tags='shift,friday,morning'
                 td 
                     +facet_staff_select tags='shift,saturday,morning'
-            //- tr
-            //-     td afternoon 12pm-4pm
-            //-     td 
-            //-         +facet_staff_select tags='shift,sunday,afternoon'
-            //-     td 
-            //-         +facet_staff_select tags='shift,monday,afternoon'
-            //-     td 
-            //-         +facet_staff_select tags='shift,tuesday,afternoon'
-            //-     td 
-            //-         +facet_staff_select tags='shift,wednesday,afternoon'
-            //-     td 
-            //-         +facet_staff_select tags='shift,thursday,afternoon'
-            //-     td 
-            //-         +facet_staff_select tags='shift,friday,afternoon'
-            //-     td 
-            //-         +facet_staff_select tags='shift,saturday,afternoon'
+            tr
+                td 12pm-4pm
+                td 
+                    +facet_staff_select tags='shift,sunday,afternoon'
+                td 
+                    +facet_staff_select tags='shift,monday,afternoon'
+                td 
+                    +facet_staff_select tags='shift,tuesday,afternoon'
+                td 
+                    +facet_staff_select tags='shift,wednesday,afternoon'
+                td 
+                    +facet_staff_select tags='shift,thursday,afternoon'
+                td 
+                    +facet_staff_select tags='shift,friday,afternoon'
+                td 
+                    +facet_staff_select tags='shift,saturday,afternoon'
             tr
                 td 4pm-9/10pm
                 td 
@@ -313,22 +315,22 @@ template(name='schedule')
                     +facet_staff_select tags='upcoming,shift,friday,morning'
                 td 
                     +facet_staff_select tags='upcoming,shift,saturday,morning'
-            //- tr
-            //-     td afternoon 12pm-4pm
-            //-     td 
-            //-         +facet_staff_select tags='upcoming,shift,sunday,afternoon'
-            //-     td 
-            //-         +facet_staff_select tags='upcoming,shift,monday,afternoon'
-            //-     td 
-            //-         +facet_staff_select tags='upcoming,shift,tuesday,afternoon'
-            //-     td 
-            //-         +facet_staff_select tags='upcoming,shift,wednesday,afternoon'
-            //-     td 
-            //-         +facet_staff_select tags='upcoming,shift,thursday,afternoon'
-            //-     td 
-            //-         +facet_staff_select tags='upcoming,shift,friday,afternoon'
-            //-     td 
-            //-         +facet_staff_select tags='upcoming,shift,saturday,afternoon'
+            tr
+                td 12pm-4pm
+                td 
+                    +facet_staff_select tags='upcoming,shift,sunday,afternoon'
+                td 
+                    +facet_staff_select tags='upcoming,shift,monday,afternoon'
+                td 
+                    +facet_staff_select tags='upcoming,shift,tuesday,afternoon'
+                td 
+                    +facet_staff_select tags='upcoming,shift,wednesday,afternoon'
+                td 
+                    +facet_staff_select tags='upcoming,shift,thursday,afternoon'
+                td 
+                    +facet_staff_select tags='upcoming,shift,friday,afternoon'
+                td 
+                    +facet_staff_select tags='upcoming,shift,saturday,afternoon'
             tr
                 td 4pm-9/10pm
                 td 
